syntax = "proto3";

option go_package = "github.com/evgeniy-krivenko/grpc-notes/pgk/api/v1";

enum ErrorCode {
  ERROR_CODE_NONE = 0;
  ERROR_CODE_INVALID_TEXT = 1;
}

message NoteError {
  ErrorCode reason = 1;
}
